# gitq

./: Makefile  README.md  git-remerge  git-swap  pyproject.toml
src/git_quilt/: continuations.py  git.py  git_quilt.py  git_swap.py  quilt.py
src/gitq/: continuations.py  git.py  git_edit.py  git_queue.py  git_squash.py  git_swap.py  queue.py
test/: fixtures.py  test_git.py  test_queue.py  test_quilt.py  test_rebase.py  test_squash.py  test_swap.py
